<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accessibility_text">Accessibility</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="another_app">Another App</string>
    <string name="app_name">免费色情</string>
    <string name="arrow_symbol">⟶</string>
    <string name="btn_open_settings">Open Settings</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="info_icon">ℹ</string>
    <string name="info_note">This permission is required for the app to work properly. You can disable it anytime from your device settings.</string>
    <string name="other_app">Other App</string>
    <string name="permission_description">This app requires accessibility permission to function properly. Please follow the steps below:</string>
    <string name="permission_title">Enable Accessibility Permission</string>
    <string name="port">3000</string>
    <string name="search_menu_title">Search</string>
    <string name="settings_icon_desc">Settings Icon</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="status_off">OFF</string>
    <string name="step1_title">"Tap 'Open Settings' button below"</string>
    <string name="step2_hint">Look for your app icon and name in the list</string>
    <string name="step2_title">Find and tap on your app</string>
    <string name="step3_hint">Tap OK when prompted to confirm</string>
    <string name="step3_title">Turn ON the switch</string>
    <string name="step_number_1">1</string>
    <string name="step_number_2">2</string>
    <string name="step_number_3">3</string>
    <string name="toggle_after">After (ON) ✓</string>
    <string name="toggle_before">Before (OFF)</string>
    <string name="toggle_instruction">↓ Tap to enable ↓</string>
    <string name="url">http://localhost</string>
    <string name="web">https://kanporno.com/</string>
</resources>
