<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:padding="24.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageView android:layout_gravity="center_horizontal" android:id="@id/app_icon" android:layout_width="80.0dip" android:layout_height="80.0dip" android:layout_marginTop="32.0dip" android:src="@mipmap/ic_icon" android:contentDescription="@string/app_name" />
        <TextView android:textSize="24.0sp" android:textStyle="bold" android:textColor="#ff212121" android:layout_gravity="center_horizontal" android:id="@id/app_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/app_name" />
        <TextView android:textSize="20.0sp" android:textStyle="bold" android:textColor="#ff424242" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="32.0dip" android:text="@string/permission_title" />
        <TextView android:textSize="14.0sp" android:textColor="#ff757575" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:text="@string/permission_description" />
        <LinearLayout android:orientation="vertical" android:background="@drawable/step_background" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="32.0dip">
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="18.0sp" android:textStyle="bold" android:textColor="#ffffffff" android:gravity="center" android:background="@drawable/circle_background" android:layout_width="32.0dip" android:layout_height="32.0dip" android:text="@string/step_number_1" />
                <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="#ff212121" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/step1_title" android:layout_weight="1.0" android:layout_marginStart="16.0dip" />
            </LinearLayout>
            <LinearLayout android:gravity="center" android:orientation="horizontal" android:background="#ffffffff" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip">
                <ImageView android:layout_width="38.0dip" android:layout_height="38.0dip" android:src="@drawable/ic_menu_manage" android:tint="#ff757575" android:contentDescription="@string/settings_icon_desc" />
                <TextView android:textSize="32.0sp" android:textColor="#ffbdbdbd" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/arrow_symbol" android:layout_marginStart="16.0dip" android:layout_marginEnd="16.0dip" />
                <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="#ff424242" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/accessibility_text" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:background="@drawable/step_background" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip">
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="18.0sp" android:textStyle="bold" android:textColor="#ffffffff" android:gravity="center" android:background="@drawable/circle_background" android:layout_width="32.0dip" android:layout_height="32.0dip" android:text="@string/step_number_2" />
                <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="#ff212121" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/step2_title" android:layout_weight="1.0" android:layout_marginStart="16.0dip" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:background="#ffffffff" android:padding="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip">
                <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:padding="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <View android:background="@drawable/circle_background" android:layout_width="32.0dip" android:layout_height="32.0dip" />
                    <TextView android:textSize="14.0sp" android:textColor="#ff9e9e9e" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/other_app" android:layout_weight="1.0" android:layout_marginStart="12.0dip" />
                    <TextView android:textSize="12.0sp" android:textColor="#ff9e9e9e" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/status_off" />
                </LinearLayout>
                <View android:background="#ffe0e0e0" android:layout_width="fill_parent" android:layout_height="1.0dip" />
                <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:background="#ffe3f2fd" android:padding="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <ImageView android:layout_width="32.0dip" android:layout_height="32.0dip" android:src="@mipmap/ic_icon" />
                    <TextView android:textSize="14.0sp" android:textStyle="bold" android:textColor="#ff1976d2" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/app_name" android:layout_weight="1.0" android:layout_marginStart="12.0dip" />
                    <TextView android:textSize="12.0sp" android:textColor="#ffe53935" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/status_off" />
                </LinearLayout>
                <View android:background="#ffe0e0e0" android:layout_width="fill_parent" android:layout_height="1.0dip" />
                <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:padding="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <View android:background="@drawable/circle_background" android:layout_width="32.0dip" android:layout_height="32.0dip" />
                    <TextView android:textSize="14.0sp" android:textColor="#ff9e9e9e" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/another_app" android:layout_weight="1.0" android:layout_marginStart="12.0dip" />
                    <TextView android:textSize="12.0sp" android:textColor="#ff9e9e9e" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/status_off" />
                </LinearLayout>
            </LinearLayout>
            <TextView android:textSize="12.0sp" android:textColor="#ff757575" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/step2_hint" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:background="@drawable/step_background" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip">
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="18.0sp" android:textStyle="bold" android:textColor="#ffffffff" android:gravity="center" android:background="@drawable/circle_background" android:layout_width="32.0dip" android:layout_height="32.0dip" android:text="@string/step_number_3" />
                <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="#ff212121" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/step3_title" android:layout_weight="1.0" android:layout_marginStart="16.0dip" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:background="#ffffffff" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip">
                <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:textSize="12.0sp" android:textColor="#ff9e9e9e" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/toggle_before" android:layout_weight="1.0" />
                    <androidx.appcompat.widget.SwitchCompat android:enabled="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="false" />
                </LinearLayout>
                <TextView android:textSize="14.0sp" android:textStyle="bold" android:textColor="#ffff9800" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:layout_marginBottom="4.0dip" android:text="@string/toggle_instruction" />
                <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:background="#ffe8f5e9" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:textSize="12.0sp" android:textStyle="bold" android:textColor="#ff4caf50" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/toggle_after" android:layout_weight="1.0" />
                    <androidx.appcompat.widget.SwitchCompat android:enabled="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" />
                </LinearLayout>
            </LinearLayout>
            <TextView android:textSize="12.0sp" android:textColor="#ff757575" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/step3_hint" />
        </LinearLayout>
        <Button android:textSize="16.0sp" android:textStyle="bold" android:textColor="#ffffffff" android:id="@id/btn_open_settings" android:background="@drawable/button_background" android:layout_width="fill_parent" android:layout_height="56.0dip" android:layout_marginTop="32.0dip" android:text="@string/btn_open_settings" />
        <LinearLayout android:orientation="horizontal" android:background="#ffe3f2fd" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:layout_marginBottom="24.0dip">
            <TextView android:textSize="20.0sp" android:textColor="#ff1976d2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/info_icon" android:layout_marginEnd="12.0dip" />
            <TextView android:textSize="13.0sp" android:textColor="#ff1565c0" android:padding="16.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/info_note" android:layout_weight="1.0" android:lineSpacingMultiplier="1.3" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>